creusot/tests/should_fail/prusti/traits/bound.stderr
warning: ambiguous dereference
  --> bound.rs:15:19
   |
15 |         at::<'x>(*x)
   |                   ^
   |
   = note: `#[warn(creusot::prusti_ambiguity)]` on by default

error: the expression's lifetime `'a` must match the current time slice `'u` (found `&'a mut Y`, expected `&'u mut _`)
  --> bound.rs:14:5
   |
14 |     fn test<'x, Y: Copy>(x: &'x mut Y) -> Y {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

